--- a/index.html
+++ b/index.html
@@ -338,18 +338,30 @@
     }
     requestAnimationFrame(draw);
 
-    /* ---------- Corazones interactivos: tocar=crear, mantener=arrastrar ---------- */
+        /* ---------- Corazones interactivos: tocar=crear, mantener=arrastrar (mejorado) ---------- */
     (function(){
       var THREE = AFRAME.THREE;
       var HEART_SVG='data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path fill="%23ff3b61" d="M47.5 6c-5 0-8.8 3-15.5 10C25.3 9 21.5 6 16.5 6 9 6 4 11.8 4 19.2 4 33.7 23.1 43.4 32 58c8.9-14.6 28-24.3 28-38.8C60 11.8 55 6 47.5 6z"/></svg>';
 
       var area={ x1:-0.5+0.06, x2:0.5-0.06, y1:-H/2+0.10, y2:-H/2+0.55 };
-      var hearts=[], MAX_HEARTS=28, HEART_SIZE=0.11;
+      var hearts=[], MAX_HEARTS=32, HEART_SIZE=0.11;
 
-      // físicas
-      var GRAVITY_Y=-0.9, LINEAR_DAMP=0.995, RESTITUTION=0.60, FRICTION_WALL=0.04, ANG_DAMP=0.992;
+      // físicas base
+      var G_MAG=0.95, LINEAR_DAMP=0.995, RESTITUTION=0.62, FRICTION_WALL=0.04, ANG_DAMP=0.992;
 
-      // plano invisible para intersección
+      // gravedad por inclinación
+      var gTilt={x:0,y:-1}; // por defecto hacia abajo
+      function _clamp(v,a,b){ return Math.max(a,Math.min(b,v)); }
+      if(window.DeviceOrientationEvent){
+        window.addEventListener('deviceorientation', function(ev){
+          var gx = _clamp((ev.gamma||0)/45, -1, 1);  // izquierda/derecha
+          var gy = _clamp((ev.beta||0)/90,  -1, 1);  // adelante/atrás
+          gTilt.x = gx;
+          gTilt.y = -1 + gy*0.35; // sesgo para que siempre “caiga” algo
+        }, true);
+      }
+
+      // plano invisible para intersección (arrastre)
       var dragPlane=document.createElement('a-plane');
       dragPlane.classList.add('dragplane');
       dragPlane.setAttribute('width',1);
@@ -358,9 +370,9 @@
       dragPlane.setAttribute('material','color:#fff; transparent:true; opacity:0; side:double; depthTest:false; depthWrite:false');
       root.appendChild(dragPlane); setRO(dragPlane, 150, false, false);
 
-      // Raycaster manual (más fiable con touch)
+      // Raycaster manual
       var raycaster=new THREE.Raycaster();
-      var lastClient=null; // {x,y} últimos coords de puntero
+      var lastClient=null; // {x,y} en pixels
 
       function sceneCanvas(){
         return scene.renderer && scene.renderer.domElement ? scene.renderer.domElement : null;
@@ -377,12 +389,13 @@
         if(!hits.length) return null;
         var p=hits[0].point.clone();
         root.object3D.worldToLocal(p);
-        p.x=clamp(p.x, area.x1, area.x2);
-        p.y=clamp(p.y, area.y1, area.y2);
+        p.x=_clamp(p.x, area.x1, area.x2);
+        p.y=_clamp(p.y, area.y1, area.y2);
         return {x:p.x,y:p.y};
       }
 
-      function createSpark(x,y){
+      // helpers visuales
+      function spark(x,y){
         var s=document.createElement('a-plane');
         s.setAttribute('width',0.05); s.setAttribute('height',0.05);
         s.setAttribute('position', x+' '+y+' 0.061');
@@ -390,50 +403,62 @@
         s.setAttribute('animation__fade','property:material.opacity; to:0; dur:220; easing:linear');
         s.setAttribute('animation__scale','property:scale; to:1.6 1.6 1; dur:220; easing:linear');
         root.appendChild(s); setRO(s, 145, false, false);
-        setTimeout(function(){ s.remove(); }, 240);
+        setTimeout(function(){ s.remove(); }, 260);
       }
-      function leaveTrail(x,y){
+      function trail(x,y){
         var g=document.createElement('a-image');
         g.setAttribute('src',HEART_SVG);
         g.setAttribute('width',0.06); g.setAttribute('height',0.06);
         g.setAttribute('position', x+' '+y+' 0.059');
         g.setAttribute('material','transparent:true; opacity:0.35; side:double; alphaTest:0.01');
-        g.setAttribute('animation__out','property:material.opacity; to:0; dur:260; easing:linear');
-        g.setAttribute('animation__scale','property:scale; to:1.15 1.15 1; dur:260; easing:linear');
+        g.setAttribute('animation__out','property:material.opacity; to:0; dur:300; easing:linear');
+        g.setAttribute('animation__scale','property:scale; to:1.12 1.12 1; dur:300; easing:linear');
         root.appendChild(g); setRO(g, 139, false, false);
-        setTimeout(function(){ g.remove(); }, 280);
+        setTimeout(function(){ g.remove(); }, 320);
+      }
+      function confettiBurst(x,y){
+        for(var k=0;k<14;k++){
+          (function(){
+            var c=document.createElement('a-plane');
+            c.setAttribute('width',0.018); c.setAttribute('height',0.018);
+            c.setAttribute('position', x+' '+y+' 0.061');
+            var col='hsl('+(~~(Math.random()*360))+',90%,60%)';
+            c.setAttribute('material','shader:flat; color:'+col+'; transparent:true; opacity:0.95; side:double');
+            var dx=(Math.random()-0.5)*0.35, dy=(Math.random()*0.42);
+            c.setAttribute('animation__go','property:position; to:'+(x+dx)+' '+(y+dy)+' 0.061; dur:520; easing:ease-out');
+            c.setAttribute('animation__fade','property:material.opacity; to:0; dur:520; easing:linear');
+            c.setAttribute('rotation','0 0 '+(~~(Math.random()*360)));
+            root.appendChild(c); setRO(c, 146, false, false);
+            setTimeout(function(){ c.remove(); }, 560);
+          })();
+        }
       }
 
-      function squash(h, factor){
-        var sx=1+0.25*factor, sy=1-0.25*factor; // estira/aplasta
-        if(sx<0.8) sx=0.8; if(sy<0.8) sy=0.8; if(sx>1.3) sx=1.3; if(sy>1.3) sy=1.3;
-        h.el.setAttribute('scale', sx+' '+sy+' 1');
-        setTimeout(function(){ h.el.setAttribute('scale','1 1 1'); }, 120);
-      }
-
+      // crear corazón
       function spawnHeart(x,y,sz){
         if(typeof x!=='number') x=(area.x1+area.x2)/2;
         if(typeof y!=='number') y=area.y2-0.05;
         if(typeof sz!=='number') sz=HEART_SIZE;
 
         var r=sz*0.5, m=r*r;
-        var hEl=document.createElement('a-image');
-        hEl.setAttribute('src',HEART_SVG);
-        hEl.setAttribute('width',sz); hEl.setAttribute('height',sz);
-        hEl.setAttribute('position', x+' '+y+' 0.06');
-        hEl.setAttribute('material','transparent:true; alphaTest:0.01; side:double');
-        hEl.classList.add('ui3d','heart');
-        root.appendChild(hEl); setRO(hEl, 140, false, false);
+        var el=document.createElement('a-image');
+        el.setAttribute('src',HEART_SVG);
+        el.setAttribute('width',sz); el.setAttribute('height',sz);
+        el.setAttribute('position', x+' '+y+' 0.06');
+        el.setAttribute('material','transparent:true; alphaTest:0.01; side:double');
+        el.classList.add('ui3d','heart');
+        root.appendChild(el); setRO(el, 140, false, false);
 
-        var h={ el:hEl, x:x, y:y, vx:(Math.random()-0.5)*0.12, vy:0.28+Math.random()*0.16,
+        var h={ el:el, x:x, y:y, vx:(Math.random()-0.5)*0.12, vy:0.28+Math.random()*0.16,
                 r:r, m:m, ang:(Math.random()*360), w:(Math.random()-0.5)*50,
-                trailT:0 };
+                trailT:0, sqx:1, sqy:1 };
         hearts.push(h);
         if(hearts.length>MAX_HEARTS){ var old=hearts.shift(); old.el.remove(); }
-        createSpark(x,y);
+        spark(x,y);
         return h;
       }
 
+      // buscar corazón bajo puntero
       function findHeartAt(p){
         var best=null, bestD2=1e9;
         for(var i=0;i<hearts.length;i++){
@@ -443,21 +468,44 @@
         return best;
       }
 
-      var dragging=null, dragOffset={x:0,y:0}, lastTime=performance.now();
+      // squash con easing (se combina con pulso de música)
+      function squash(h, amount){
+        var a=_clamp(amount,0,1);
+        h.sqx = 1+0.25*a;
+        h.sqy = 1-0.25*a;
+      }
 
+      // doble tap POP
+      var lastTapT=0, lastTapP=null;
+      function isDoubleTap(p){
+        var now=performance.now();
+        var ok = (now-lastTapT)<260 && lastTapP && Math.hypot(p.x-lastTapP.x, p.y-lastTapP.y)<0.05;
+        lastTapT=now; lastTapP=p; return ok;
+      }
+      function popHeart(h){
+        confettiBurst(h.x,h.y);
+        h.el.remove();
+        var idx=hearts.indexOf(h); if(idx>=0) hearts.splice(idx,1);
+      }
+
+      // input
+      var dragging=null, dragOffset={x:0,y:0};
       function onPointerDown(ev){
         if(ev.touches && ev.touches.length){ lastClient={x:ev.touches[0].clientX, y:ev.touches[0].clientY}; }
         else{ lastClient={x:ev.clientX, y:ev.clientY}; }
         var p=pointerLocalFromClient(); if(!p) return;
         var h=findHeartAt(p);
+
+        // doble tap para explotar
+        if(h && isDoubleTap(p)){ popHeart(h); ev.preventDefault&&ev.preventDefault(); return; }
+
         if(h){
           dragging=h; dragOffset={x:h.x-p.x, y:h.y-p.y};
         }else{
-          // crear y enganchar directamente
           var nh=spawnHeart(p.x,p.y, HEART_SIZE*(0.9+Math.random()*0.25));
           dragging=nh; dragOffset={x:0,y:0};
         }
-        ev.preventDefault && ev.preventDefault();
+        ev.preventDefault&&ev.preventDefault();
       }
       function onPointerMove(ev){
         if(ev.touches && ev.touches.length){ lastClient={x:ev.touches[0].clientX, y:ev.touches[0].clientY}; }
@@ -465,39 +513,53 @@
       }
       function onPointerUp(){ dragging=null; }
 
-      var canvasEl=null;
+      // enganchar listeners
       function attachPointer(){
-        canvasEl=scene.renderer && scene.renderer.domElement ? scene.renderer.domElement : null;
-        var tgt=canvasEl || document.getElementById('scene');
-        tgt.addEventListener('mousedown', onPointerDown, {passive:false});
+        var canvas=sceneCanvas() || document.getElementById('scene');
+        canvas.addEventListener('mousedown', onPointerDown, {passive:false});
         window.addEventListener('mousemove', onPointerMove, {passive:true});
         window.addEventListener('mouseup', onPointerUp, {passive:true});
-        tgt.addEventListener('touchstart', onPointerDown, {passive:false});
+        canvas.addEventListener('touchstart', onPointerDown, {passive:false});
         window.addEventListener('touchmove', onPointerMove, {passive:false});
         window.addEventListener('touchend', onPointerUp, {passive:true});
         window.addEventListener('touchcancel', onPointerUp, {passive:true});
       }
-      if(scene.hasLoaded){ attachPointer(); } else {
-        scene.addEventListener('loaded', attachPointer, {once:true});
+      if(scene.hasLoaded){ attachPointer(); } else { scene.addEventListener('loaded', attachPointer, {once:true}); }
+
+      // audio → pulso (0..1)
+      var audioPulse=0;
+      function sampleAudioPulse(){
+        if(!analyser) return (audioPulse*=0.9);
+        var arr=new Uint8Array(analyser.frequencyBinCount);
+        analyser.getByteFrequencyData(arr);
+        var from=2, to=Math.min(arr.length, 40), sum=0;
+        for(var i=from;i<to;i++) sum+=arr[i];
+        var avg = sum/(to-from)/255;
+        audioPulse = audioPulse*0.75 + avg*0.25;
+        return audioPulse;
       }
 
+      // colisiones par a par
       function collidePair(a,b){
-        var dx=b.x-a.x, dy=b.y-a.y, distSq=dx*dx+dy*dy, minDist=a.r+b.r;
-        if(distSq<=0) return;
-        var dist=Math.sqrt(distSq); if(dist>=minDist) return;
-        var nx=dx/dist, ny=dy/dist, overlap=minDist-dist;
+        var dx=b.x-a.x, dy=b.y-a.y, d2=dx*dx+dy*dy, min=a.r+b.r;
+        if(d2<=0) return; var d=Math.sqrt(d2); if(d>=min) return;
+        var nx=dx/d, ny=dy/d, overlap=min-d;
         var k=0.5; a.x-=nx*overlap*k; a.y-=ny*overlap*k; b.x+=nx*overlap*k; b.y+=ny*overlap*k;
-        var rvx=b.vx-a.vx, rvy=b.vy-a.vy, relVel=rvx*nx + rvy*ny; if(relVel>0) return;
-        var j=-(1+RESTITUTION)*relVel/(1/a.m + 1/b.m), jx=j*nx, jy=j*ny;
+        var rvx=b.vx-a.vx, rvy=b.vy-a.vy, rel=rvx*nx + rvy*ny; if(rel>0) return;
+        var j=-(1+RESTITUTION)*rel/(1/a.m + 1/b.m), jx=j*nx, jy=j*ny;
         a.vx-=jx/a.m; a.vy-=jy/a.m; b.vx+=jx/b.m; b.vy+=jy/b.m;
-        a.w-= (jy*0.5 - jx*0.5)*18; b.w+= (jy*0.5 - jx*0.5)*18;
-        if(j>0.30){ createSpark(a.x+nx*a.r, a.y+ny*a.r); squash(a, 0.9); squash(b, 0.9); }
+        if(j>0.28){ spark(a.x+nx*a.r, a.y+ny*a.r); squash(a,0.9); squash(b,0.9); }
       }
 
-      function physics(){
-        var now=performance.now(), dt=Math.min(1/60, (now-lastTime)/1000); lastTime=now;
+      // bucle
+      var lastT=performance.now();
+      function tick(){
+        var now=performance.now(), dt=Math.min(1/60, (now-lastT)/1000); lastT=now;
 
-        // arrastre con "muelle" hacia el puntero
+        // “música late”
+        var pulse = 1 + sampleAudioPulse()*0.22;
+
+        // arrastre con muelle
         var p=pointerLocalFromClient();
         if(dragging && p){
           var nx=p.x+dragOffset.x, ny=p.y+dragOffset.y;
@@ -507,36 +569,45 @@
           dragging.y = dragging.y*(1-follow) + ny*follow;
           dragging.vx = vx; dragging.vy = vy;
           dragging.trailT += dt;
-          if(dragging.trailT>0.06){ leaveTrail(dragging.x, dragging.y); dragging.trailT=0; }
+          if(dragging.trailT>0.06){ trail(dragging.x, dragging.y); dragging.trailT=0; }
         }
 
+        // integrar + paredes + escala (pulso x squash)
         for(var i=0;i<hearts.length;i++){
           var h=hearts[i];
           if(h!==dragging){
-            h.vy += GRAVITY_Y*dt;
+            h.vx += gTilt.x*G_MAG*dt;
+            h.vy += gTilt.y*G_MAG*dt;
             h.vx *= LINEAR_DAMP; h.vy *= LINEAR_DAMP;
             h.x  += h.vx*dt;     h.y  += h.vy*dt;
           }
-          // paredes + squash
           if(h.x-h.r<area.x1){ h.x=area.x1+h.r; h.vx*=-RESTITUTION; h.vy*=1-FRICTION_WALL; squash(h,0.8); }
           if(h.x+h.r>area.x2){ h.x=area.x2-h.r; h.vx*=-RESTITUTION; h.vy*=1-FRICTION_WALL; squash(h,0.8); }
           if(h.y-h.r<area.y1){ h.y=area.y1+h.r; h.vy*=-RESTITUTION; h.vx*=1-FRICTION_WALL; squash(h,0.8); }
           if(h.y+h.r>area.y2){ h.y=area.y2-h.r; h.vy*=-RESTITUTION; h.vx*=1-FRICTION_WALL; squash(h,0.8); }
-          // giro e imagen
+
+          // relajar squash
+          h.sqx += (1 - h.sqx)*0.15;
+          h.sqy += (1 - h.sqy)*0.15;
+
+          // giro y render
           h.w *= ANG_DAMP; h.ang = (h.ang||0) + h.w*dt;
+          var sx=pulse*h.sqx, sy=pulse*h.sqy;
           h.el.setAttribute('position', h.x+' '+h.y+' 0.06');
           h.el.setAttribute('rotation', '0 0 '+h.ang);
+          h.el.setAttribute('scale', sx+' '+sy+' 1');
         }
 
-        // colisiones pares
+        // colisiones
         for(var a=0;a<hearts.length;a++){
           for(var b=a+1;b<hearts.length;b++) collidePair(hearts[a], hearts[b]);
         }
 
-        requestAnimationFrame(physics);
+        requestAnimationFrame(tick);
       }
-      requestAnimationFrame(physics);
+      requestAnimationFrame(tick);
     })();
+
 
     /* ---------- Botón cámara robusto ---------- */
     function ensureSceneLoaded(){
