--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   .dbg{position:fixed;right:8px;top:8px;background:#0f1522cc;border:1px solid #22324d;border-radius:8px;
        padding:8px 10px;color:#cfe3ff;font:12px/1.3 system-ui;z-index:8;pointer-events:none;opacity:.16;transition:opacity .35s}
   .dbg:hover{opacity:1}
+  .hud{position:fixed;left:0;right:0;bottom:20px;text-align:center;z-index:9;pointer-events:none}
+  .hud span{display:inline-block;background:#0f1522cc;color:#eaf2ff;border:1px solid #22324d;border-radius:12px;
+            padding:10px 14px;font:14px/1.2 system-ui}
 </style>
 </head>
 <body>
@@ -25,12 +28,13 @@
   <button id="btnAudio" class="btn" type="button" disabled>▶️ Audio</button>
 </div>
 <div id="dbg" class="dbg">Listo…</div>
+<div class="hud"><span id="hudText">Preparando…</span></div>
 
 <a-scene id="scene"
   embedded vr-mode-ui="enabled:false" device-orientation-permission-ui="enabled:true"
   renderer="alpha:true;antialias:true;logarithmicDepthBuffer:true"
   loading-screen="enabled:false"
-  mindar-image="uiLoading: yes; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;"
+  mindar-image="uiLoading: no; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;"
   style="width:100vw;height:100vh">
 
   <a-camera id="cam" look-controls="enabled:false">
@@ -40,20 +44,22 @@
   <a-entity id="anchor" mindar-image-target="targetIndex:0"></a-entity>
 </a-scene>
 
-<!-- Vídeo fuera de <a-assets> para evitar warnings de preload; lo cargamos por JS -->
+<!-- Vídeo fuera de a-assets; lo asigno por JS -->
 <video id="v1" playsinline webkit-playsinline muted autoplay loop preload="auto" crossorigin="anonymous" style="display:none"></video>
 
 <script>
 (function(){
   'use strict';
 
-  // -------- Helpers ----------
+  var MINDAR_CDN = 'https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/';
+
   function log(m){
     var el=document.getElementById('dbg');
     el.textContent=m+' · '+new Date().toLocaleTimeString();
     el.style.opacity=.9; setTimeout(function(){el.style.opacity=.16;},1200);
     try{ console.log('[AR]',m); }catch(e){}
   }
+  function hud(m){ var h=document.getElementById('hudText'); if(h) h.textContent=m; }
   function clamp(v,a,b){ return Math.max(a,Math.min(b,v)); }
   function getRay(){ var r=document.getElementById('mouseRay'); return (r && r.components) ? r.components.raycaster : null; }
   function setRO(el, order, depthTest, depthWrite){
@@ -64,44 +70,74 @@
     });
   }
 
-  // -------- Cargar JSON ----------
+  // Cámara del móvil detrás (cover) cuando MindAR crea el stream
+  new MutationObserver(function(){
+    var vids=document.querySelectorAll('video');
+    for(var i=0;i<vids.length;i++){
+      var v=vids[i];
+      if(v.srcObject instanceof MediaStream){
+        Object.assign(v.style,{objectFit:'cover',position:'fixed',inset:'0',width:'100vw',height:'100vh',zIndex:'0',background:'#000'});
+      }
+    }
+  }).observe(document.documentElement,{subtree:true,childList:true});
+
   var qs = new URLSearchParams(location.search);
   var cfgUrl = qs.get('cfg');
-  if(!cfgUrl){ log('Falta ?cfg=URL_DEL_JSON'); return; }
+  if(!cfgUrl){ log('Falta ?cfg=URL_DEL_JSON'); hud('Falta configuración'); return; }
 
   fetch(cfgUrl,{mode:'cors',cache:'no-store'}).then(function(r){ return r.json(); }).then(function(CFG){
-    start(CFG);
+    init(CFG);
   }).catch(function(e){
-    log('❗ No pude cargar el JSON');
+    log('❗ No pude cargar el JSON'); hud('Error cargando configuración');
   });
 
-  function start(CFG){
+  function init(CFG){
     var scene = document.getElementById('scene');
-    scene.setAttribute('mindar-image',
-      'imageTargetSrc:'+CFG.target+'; uiLoading: yes; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;');
+    var anchor = document.getElementById('anchor');
 
-    // cámara del móvil detrás (cover)
-    new MutationObserver(function(){
-      var vids=document.querySelectorAll('video');
-      for(var i=0;i<vids.length;i++){
-        var v=vids[i];
-        if(v.srcObject instanceof MediaStream){
-          Object.assign(v.style,{objectFit:'cover',position:'fixed',inset:'0',width:'100vw',height:'100vh',zIndex:'0',background:'#000'});
-        }
-      }
-    }).observe(document.documentElement,{subtree:true,childList:true});
+    // Prefetch del target .mind → blob: para evitar CORS y comprobar 200
+    hud('Cargando target…');
+    prefetchTarget(CFG.target).then(function(targetURL){
+      // Inyectamos TODOS los paths clave de MindAR
+      scene.setAttribute('mindar-image',
+        'imageTargetSrc:'+targetURL+
+        '; wasmPath:'+MINDAR_CDN+
+        '; workerPath:'+MINDAR_CDN+
+        '; uiLoading: no; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;'
+      );
+      buildAR(CFG);
+    }).catch(function(){
+      hud('No se pudo cargar el target'); log('Fallo al prefetch del .mind');
+    });
+  }
+
+  function prefetchTarget(url){
+    return new Promise(function(resolve,reject){
+      if(!url){ return reject(new Error('sin url')); }
+      fetch(url,{mode:'cors',cache:'no-store'}).then(function(r){
+        if(!r.ok){ throw new Error('HTTP '+r.status); }
+        return r.blob();
+      }).then(function(b){
+        var o = URL.createObjectURL(b);
+        resolve(o);
+      }).catch(function(e){ reject(e); });
+    });
+  }
+
+  function buildAR(CFG){
+    var scene = document.getElementById('scene');
+    var anchor = document.getElementById('anchor');
 
     var PW=CFG.pw||2481, PH=CFG.ph||3508, H=PH/PW;
     function px2(x,y,w,h){ return {wn:w/PW, hn:h/PW, cx:-0.5+(x+w/2)/PW, cy:H/2-(y+h/2)/PW}; }
 
-    var anchor=document.getElementById('anchor');
     var root=document.createElement('a-entity'); anchor.appendChild(root);
     var cal = (CFG.cal||{dx:0,dy:0,scale:1,rot:0});
     root.setAttribute('position', (cal.dx/PW)+' '+(-cal.dy/PW)+' 0');
     root.setAttribute('scale', (cal.scale||1)+' '+(cal.scale||1)+' 1');
     root.setAttribute('rotation', '0 0 '+(cal.rot||0));
 
-    // Fondo póster
+    // Fondo
     var paper=document.createElement('a-plane');
     paper.setAttribute('width',1); paper.setAttribute('height',H);
     paper.setAttribute('position','0 0 -0.02');
@@ -155,7 +191,7 @@
       runner(u.cx+u.wn/2+0.01, u.cy+u.hn/2, u.cx+u.wn/2+0.01, u.cy-u.hn/2, glow1, 750);
     })();
 
-    // Vídeo centrado
+    // Vídeo
     var v1=document.getElementById('v1');
     v1.crossOrigin='anonymous'; v1.muted=true; v1.playsInline=true;
     v1.setAttribute('playsinline','true'); v1.setAttribute('webkit-playsinline','true');
@@ -213,7 +249,6 @@
     var titlePx=fitFontFor(CFG.title||'', titleSlot.w*Cw/PW, titleSlot.h*Ch/PH, 800);
     var artistPx=fitFontFor(CFG.artist||'',artistSlot.w*Cw/PW, artistSlot.h*Ch/PH, 600);
 
-    // Audio + analyser
     var btnAudio=document.getElementById('btnAudio');
     var audio=null, acx=null, analyser=null;
     function setupAudio(){
@@ -238,9 +273,9 @@
       })();
     };
 
-    var BARS=56;                       // más barras
-    var waveH=Math.round(80*Cw/2048);  // más alto
-    var gap=Math.round(34*Cw/2048);    // más separación
+    var BARS=56;
+    var waveH=Math.round(80*Cw/2048);
+    var gap=Math.round(34*Cw/2048);
     var levels=[], peaks=[];
     for(var i0=0;i0<BARS;i0++){ levels[i0]=0; peaks[i0]=0; }
     function mmss(t){ if(!isFinite(t)||t<0) t=0; var m=Math.floor(t/60), s=Math.floor(t%60); return m+':'+String(s).padStart(2,'0'); }
@@ -294,7 +329,6 @@
       for(var pass=0; pass<2; pass++){
         var baseY = (pass===0? yTop : yBot);
         var col = (pass===0? glow1 : glow2);
-
         for(var i=0;i<BARS;i++){
           var bandIndex = arr ? Math.min(arr.length-1, 2+i) : 0;
           var raw = arr ? (arr[bandIndex]/255) : (0.25 + 0.75*Math.abs(Math.sin((t/420)+(i*0.35))));
@@ -325,7 +359,6 @@
           }
         }
       }
-
       if(overlay.__tex){ overlay.__tex.needsUpdate = true; }
       requestAnimationFrame(draw);
     }
@@ -358,7 +391,6 @@
     }
 
     var dragging=null, dragOffset={x:0,y:0}, lastPointer=null, lastTime=0;
-
     function pointerLocal(){
       var ray = getRay();
       var ints = (ray && ray.intersections) ? ray.intersections : [];
@@ -424,35 +456,43 @@
         o.el.setAttribute('position', o.x+' '+o.y+' 0.06');
         o.el.setAttribute('rotation', '0 0 '+(Math.sin(performance.now()/300 + o.x*10)*6));
       }
-
       requestAnimationFrame(heartsTick);
     })();
 
-    // ---------- Botón de cámara robusto ----------
+    // Botón de cámara
     var btnStart=document.getElementById('btnStart');
     btnStart.addEventListener('click', function(){
       btnStart.disabled=true;
       (async function(){
         try{
-          log('Pidiendo cámara…');
+          hud('Pidiendo cámara…');
           var s=await navigator.mediaDevices.getUserMedia({video:{facingMode:{ideal:'environment'}}, audio:false});
-          // soltamos tracks (MindAR pedirá su stream)
           s.getTracks().forEach(function(t){ t.stop(); });
         }catch(e){}
         try{
-          var sys=scene.systems['mindar-image-system'], comp=scene.components['mindar-image'];
+          hud('Iniciando AR…');
+          // forzamos paths por si el componente los reescribe
+          var comp = scene.components['mindar-image'];
+          if(comp){ comp.data.wasmPath = MINDAR_CDN; comp.data.workerPath = MINDAR_CDN; }
+          var sys=scene.systems['mindar-image-system'];
           if(sys && sys.start){ await sys.start(); }
           else if(comp && comp.start){ await comp.start(); }
           btnStart.textContent='Cámara lista';
+          hud('Escanea el póster…');
           log('Cámara iniciada');
         }catch(e2){
           btnStart.disabled=false;
+          hud('Error iniciando cámara/AR');
           log('No se pudo iniciar la cámara ('+(e2.name||'')+' '+(e2.message||e2)+')');
         }
       })();
     });
 
-    // Auto-arranque con primer toque (iOS ayuda)
+    // Eventos MindAR para saber si “se queda cargando”
+    scene.addEventListener('arReady', function(){ log('MindAR listo'); hud('Apunta al póster'); });
+    scene.addEventListener('arError', function(e){ log('MindAR error'); hud('Error de AR'); });
+
+    // Auto-arranque con primer toque (iOS)
     window.addEventListener('pointerdown', function(){
       var sys = scene.systems['mindar-image-system'];
       if(!sys || !sys.active) btnStart.click();
@@ -460,6 +500,8 @@
 
     // Estados target
     anchor.addEventListener('targetFound', function(){
+      hud('¡Detectado!'); setTimeout(function(){ hud(''); }, 800);
+      var v1=document.getElementById('v1');
       v1.play().catch(function(){});
       setupAudio();
       (async function(){ try{ if(acx && acx.state==='suspended'){ await acx.resume(); } await audio.play(); }catch(e){} })();
@@ -468,10 +510,19 @@
       log('Target FOUND');
     });
     anchor.addEventListener('targetLost', function(){
-      v1.pause(); if(audio) audio.pause(); btnAudio.textContent='▶️ Audio'; log('Target LOST…');
+      var v1=document.getElementById('v1');
+      v1.pause(); if(audio) audio.pause(); document.getElementById('btnAudio').textContent='▶️ Audio';
+      hud('Escanea el póster…'); log('Target LOST…');
     });
+
+    // Watchdog: si en 6s no hay arReady, avisamos de target/paths
+    setTimeout(function(){
+      var sys = scene.systems['mindar-image-system'];
+      if(!sys || !sys.controller){ hud('Comprobando target/paths…'); log('Posible problema de target/worker/wasm'); }
+    }, 6000);
   }
 })();
 </script>
 </body>
 </html>
+
