--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
 <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 <style>
   html,body{margin:0;height:100%;background:#000}
-  /* Cámara detrás */
   video[playsinline]{position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;
     object-fit:cover!important;z-index:0!important;background:#000!important}
-  /* WebGL delante */
   a-scene{position:fixed!important;inset:0!important;z-index:3!important;pointer-events:auto!important}
   canvas.a-canvas{position:fixed!important;inset:0!important;z-index:4!important;pointer-events:auto!important}
-  /* UI */
   .ui{position:fixed;left:8px;top:8px;display:flex;gap:8px;z-index:9}
   .btn{border:1px solid #2a3a58;background:#0f1522;color:#eaf2ff;border-radius:10px;padding:8px 10px}
   .dbg{position:fixed;right:8px;top:8px;background:#0f1522cc;border:1px solid #22324d;border-radius:8px;
@@ -37,7 +34,6 @@
   style="width:100vw;height:100vh">
 
   <a-assets timeout="60000">
-    <!-- SIN src aquí: lo asignamos por JS (evita warnings y CORS raros) -->
     <video id="v1" playsinline webkit-playsinline muted autoplay loop preload="auto" crossorigin="anonymous"></video>
   </a-assets>
 
@@ -51,6 +47,19 @@
 <script>
 (function(){
   'use strict';
+
+  /* ---------- Parche gUM: si la trasera falla, usa cualquiera ---------- */
+  if(navigator.mediaDevices && navigator.mediaDevices.getUserMedia){
+    var _origGUM = navigator.mediaDevices.getUserMedia.bind(navigator.mediaDevices);
+    navigator.mediaDevices.getUserMedia = function(c){
+      return _origGUM(c).catch(function(err){
+        if(err && (err.name==='NotFoundError' || err.name==='OverconstrainedError')){
+          return _origGUM({video:true,audio:false});
+        }
+        throw err;
+      });
+    };
+  }
 
   /* ---------- Helpers ---------- */
   var qs = new URLSearchParams(location.search);
@@ -71,12 +80,12 @@
   fetch(cfgUrl, {mode:'cors', cache:'no-store'})
     .then(function(r){ return r.json(); })
     .then(function(CFG){ init(CFG); })
-    .catch(function(e){ log('❗ No pude cargar el JSON'); });
+    .catch(function(){ log('❗ No pude cargar el JSON'); });
 
   function init(CFG){
     var scene = document.getElementById('scene');
 
-    /* Cámara del dispositivo como fondo (cover) */
+    /* Cámara fondo cover */
     new MutationObserver(function(){
       var vids = document.querySelectorAll('video');
       for(var i=0;i<vids.length;i++){
@@ -108,7 +117,7 @@
     paper.setAttribute('material','shader:flat; color:#ffffff; side:double; transparent:false');
     root.appendChild(paper); setRO(paper, 1, false, false);
 
-    /* Marco animado bonito (glow + runners) */
+    /* Marco animado (glow + runners) */
     var vslot=CFG.slotVid, u=px2(vslot.x,vslot.y,vslot.w,vslot.h);
     var glow1 = (CFG.colors&&CFG.colors.wave1) ? CFG.colors.wave1 : '#13d77a';
     var glow2 = (CFG.colors&&CFG.colors.wave2) ? CFG.colors.wave2 : '#ffd54a';
@@ -153,11 +162,11 @@
       runner(u.cx+u.wn/2, u.cy-u.hn/2-0.012, u.cx-u.wn/2, u.cy-u.hn/2-0.012, glow2, 300);
     })();
 
-    /* Vídeo centrado (cover, estable) */
+    /* Vídeo centrado (cover) */
     var v1=document.getElementById('v1');
     v1.crossOrigin='anonymous'; v1.muted=true; v1.playsInline=true;
     v1.setAttribute('playsinline','true'); v1.setAttribute('webkit-playsinline','true');
-    v1.src = CFG.video || '';  /* ej: Cloudinary mp4 */
+    v1.src = CFG.video || '';  /* asegurarse de que NO esté vacío */
     v1.load();
 
     var vPlane=document.createElement('a-plane');
@@ -180,7 +189,7 @@
       if(mesh && mesh.material && mesh.material.map) coverFromMap(mesh.material.map);
     });
 
-    /* Overlay canvas: texto + barra musical grande */
+    /* Overlay: texto + barra musical grande */
     var Cw=2048, Ch=Math.round(Cw*H);
     var canvas=document.createElement('canvas'); canvas.width=Cw; canvas.height=Ch;
     var ctx=canvas.getContext('2d');
@@ -217,7 +226,7 @@
       try{
         var AC=window.AudioContext||window.webkitAudioContext;
         acx=new AC(); analyser=acx.createAnalyser();
-        analyser.fftSize=256; /* más resolución */
+        analyser.fftSize=256;
         analyser.smoothingTimeConstant=0.86;
         var src=acx.createMediaElementSource(audio); src.connect(analyser); analyser.connect(acx.destination);
       }catch(e){}
@@ -226,12 +235,12 @@
     }
     btnAudio.addEventListener('click', function(){
       setupAudio();
-      (async function(){
-        try{
-          if(audio.paused){ if(acx && acx.state==='suspended'){ await acx.resume(); } await audio.play(); }
-          else { audio.pause(); }
-        }catch(e){}
-      })();
+      Promise.resolve().then(function(){
+        if(audio.paused){
+          if(acx && acx.state==='suspended'){ return acx.resume(); }
+        }
+      }).then(function(){ if(audio.paused) return audio.play(); else audio.pause(); })
+      .catch(function(){});
     });
 
     var BARS=64, waveH=Math.round(60*Cw/2048), gap=Math.round(28*Cw/2048);
@@ -241,7 +250,6 @@
     function draw(){
       ctx.clearRect(0,0,Cw,Ch);
 
-      /* Título / Artista */
       var tx=Math.round(titleSlot.x*Cw/PW), ty=Math.round(titleSlot.y*Ch/PH),
           tw=Math.round(titleSlot.w*Cw/PW), th=Math.round(titleSlot.h*Ch/PH);
       ctx.textAlign='center'; ctx.textBaseline='middle';
@@ -255,9 +263,8 @@
       ctx.fillStyle='rgba(0,0,0,.18)'; ctx.fillText(CFG.artist||'', ax+aw/2+1.8, ay+ah/2+1.8);
       ctx.fillStyle=(CFG.colors&&CFG.colors.artist)||'#000'; ctx.fillText(CFG.artist||'', ax+aw/2, ay+ah/2);
 
-      /* Barra base grande */
       var pbx=Math.round(barSlot.x*Cw/PW), pby=Math.round(barSlot.y*Ch/PH),
-          pbw=Math.round(barSlot.w*Cw/PW), pbh=Math.max(8,Math.round(barSlot.h*Ch/PH)); /* más alta */
+          pbw=Math.round(barSlot.w*Cw/PW), pbh=Math.max(8,Math.round(barSlot.h*Ch/PH));
       ctx.fillStyle='rgba(0,0,0,0.12)'; ctx.fillRect(pbx, pby+3, pbw, pbh);
       ctx.fillStyle='#000'; ctx.fillRect(pbx, pby, pbw, pbh);
 
@@ -275,7 +282,6 @@
       ctx.textAlign='left';  ctx.fillText(cur, pbx, pby - 12);
       ctx.textAlign='right'; ctx.fillText(dur, pbx+pbw, pby - 12);
 
-      /* Espectro doble (suave + peaks + sweep glow) */
       var arr = analyser ? (new Uint8Array(analyser.frequencyBinCount)) : null;
       if(arr) analyser.getByteFrequencyData(arr);
 
@@ -304,12 +310,10 @@
           ctx.fillStyle = col;
           if(pass===0) ctx.fillRect(x, baseY-h, w, h); else ctx.fillRect(x, baseY, w, h);
 
-          /* Peak-hold */
           ctx.globalAlpha = 0.75; ctx.fillStyle = '#000';
           if(pass===0) ctx.fillRect(x, baseY-peakY-2, w, 2); else ctx.fillRect(x, baseY+peakY, w, 2);
           ctx.globalAlpha = 1;
 
-          /* Glow barrido */
           if(glowAmt>0){
             var g = ctx.createLinearGradient(x,0,x+w,0);
             g.addColorStop(0, 'rgba(255,255,255,'+(0.16*glowAmt)+')');
@@ -325,10 +329,10 @@
     }
     requestAnimationFrame(draw);
 
-    /* Corazones con física + drag en TODO el póster */
+    /* Corazones con física + drag (en todo el póster) */
     var HEART_SVG = 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path fill="%23ff3b61" d="M47.5 6c-5 0-8.8 3-15.5 10C25.3 9 21.5 6 16.5 6 9 6 4 11.8 4 19.2 4 33.7 23.1 43.4 32 58c8.9-14.6 28-24.3 28-38.8C60 11.8 55 6 47.5 6z"/></svg>';
-    var hearts=[]; // {el,x,y,vx,vy}
-    var area = { x1:-0.5+0.03, x2:0.5-0.03, y1:-H/2+0.03, y2:H/2-0.03 }; // todo el póster con un pelín de margen
+    var hearts=[]; 
+    var area = { x1:-0.5+0.03, x2:0.5-0.03, y1:-H/2+0.03, y2:H/2-0.03 };
 
     var dragPlane=document.createElement('a-plane');
     dragPlane.classList.add('dragplane','ui3d');
@@ -351,7 +355,6 @@
       if(hearts.length>28){ var old=hearts.shift(); if(old && old.el) old.el.remove(); }
     }
 
-    /* Tap en cualquier punto del póster => aparece corazón allí */
     dragPlane.addEventListener('click', function(){
       var ray=getRay(); var ints=ray && ray.intersections ? ray.intersections : [];
       var hit=null;
@@ -387,7 +390,7 @@
     scene.addEventListener('pointerleave',function(){ dragging=null; });
 
     (function heartsTick(){
-      var dt=1/60, g=-0.4, damp=0.60; // gravedad ligera + rebote
+      var dt=1/60, g=-0.4, damp=0.60;
       var now=performance.now();
       var p=pointerLocal();
 
@@ -417,7 +420,7 @@
       requestAnimationFrame(heartsTick);
     })();
 
-    /* Botón cámara robusto */
+    /* Botón cámara robusto (sin async/await) */
     function waitSceneLoaded(){
       return new Promise(function(res){ if(scene.hasLoaded) res(); else scene.addEventListener('loaded', function(){res();}, {once:true}); });
     }
@@ -428,23 +431,25 @@
         scene.addEventListener('componentinitialized', onInit);
       });
     }
-    async function startMindAR(){
-      var comp=scene.components['mindar-image'];
-      var sys =scene.systems['mindar-image-system'];
-      if(comp && comp.start){ await comp.start(); return; }
-      if(sys  && sys.start ){ await sys.start();  return; }
-      throw new Error('No MindAR start method');
+    function startMindAR(){
+      return new Promise(function(res,rej){
+        var comp=scene.components['mindar-image'];
+        var sys =scene.systems['mindar-image-system'];
+        var p=null;
+        if(comp && comp.start) p=comp.start();
+        else if(sys && sys.start) p=sys.start();
+        else return rej(new Error('No MindAR start method'));
+        Promise.resolve(p).then(res).catch(rej);
+      });
     }
-    async function bootAR(){
-      try{
-        var s=await navigator.mediaDevices.getUserMedia({video:{facingMode:{ideal:'environment'}}, audio:false});
-        s.getTracks().forEach(function(t){ t.stop(); });
-      }catch(e){}
-      await waitSceneLoaded();
-      await waitMindARReady();
-      await startMindAR();
-      document.getElementById('btnStart').textContent='Cámara lista';
-      log('Cámara iniciada');
+    function bootAR(){
+      return navigator.mediaDevices.getUserMedia({video:{facingMode:{ideal:'environment'}}, audio:false})
+      .then(function(s){ s.getTracks().forEach(function(t){ t.stop(); }); })
+      .catch(function(){})
+      .then(waitSceneLoaded)
+      .then(waitMindARReady)
+      .then(startMindAR)
+      .then(function(){ document.getElementById('btnStart').textContent='Cámara lista'; log('Cámara iniciada'); });
     }
 
     var btnStart=document.getElementById('btnStart');
@@ -456,11 +461,13 @@
       });
     });
 
-    /* Al detectar target: reproducir vídeo y habilitar audio */
+    /* Target events: vídeo + audio */
     anchor.addEventListener('targetFound', function(){
       v1.play().catch(function(){});
       setupAudio();
-      (async function(){ try{ if(acx && acx.state==='suspended'){ await acx.resume(); } await audio.play(); }catch(e){} })();
+      Promise.resolve().then(function(){ if(acx && acx.state==='suspended') return acx.resume(); })
+        .then(function(){ if(audio && audio.paused) return audio.play(); })
+        .catch(function(){});
       document.getElementById('btnAudio').disabled=false;
       log('Target FOUND');
     });
@@ -468,7 +475,7 @@
       v1.pause(); if(audio) audio.pause(); btnAudio.textContent='▶️ Audio'; log('Target LOST…');
     });
 
-    /* Primer gesto en iOS: intentar arrancar */
+    /* Arranque en primer gesto (iOS) */
     window.addEventListener('pointerdown', function(){
       var sys=scene.systems['mindar-image-system'];
       if(!sys || !sys.active) btnStart.click();
